# BoviCheck

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/controllers/: ai_controller.py  animal_controller.py  data_controller.py  file_manager_controller.py  index_controller.py  main_controller.py  navigation.py  theme_controller.py
src/models/: app_state.py  calculator.py  definitions.py  export_manager.py  persistence.py  prompts.py
src/utils/: helpers.py
src/views/: about_view.py  ai_history_view.py  ai_view.py  animal_detail_view.py  animal_dialogs_view.py  dashboard_view.py  dialogs_view.py  export_view.py  file_manager_view.py  herd_list_view.py  history_entry_view.py  history_view.py  index_view.py  indices_list_view.py  main_view.py  settings_view.py
