[project]
name = "bovicheck"
version = "0.9.8"
description = "Um assistente para cálculo e acompanhamento de índices zootécnicos para bovinos."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Hugo Barros", email = "hugobs4987@gmail.com" }
]
dependencies = [
    "flet==0.28.3",
    "requests",
    "pandas>=2.2.3",
    "openpyxl==3.1.5",
    "python-dotenv",
]

[tool.flet]
org = "com.hugobarros"
product = "BoviCheck"
company = "Hugo Barros"
copyright = "Copyright (C) 2025 Hugo Barros"

[tool.flet.app]
path = "src"
assets_dir = "assets"

[tool.flet.android]
package_name = "com.hugobarros.bovicheck"
app_name = "BoviCheck"
permissions = [
    "android.permission.INTERNET"
]
legacy_storage = true

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "requests",
    "pandas>=2.2.3",
    "openpyxl==3.1.5"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
